--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "LMS",
-    "id": "moodle",
+    "name": "CEM",
+    "id": "cem",
     "packaging_format": 1,
     "description": {
-        "en": "Learning Management System."
+        "en": "Customer Experience Management."
     },
     "version": "4.0",
     "url": "http://www.deifysolutions.com",
@@ -26,7 +26,7 @@
                 "name": "domain",
                 "type": "domain",
                 "ask": {
-                    "en": "Choose a domain name for LMS"
+                    "en": "Choose a domain name for CEM"
                 },
                 "example": "example.com"
             },
@@ -34,10 +34,10 @@
                 "name": "path",
                 "type": "path",
                 "ask": {
-                    "en": "Choose a path for Moodle"
+                    "en": "Choose a path for CEM"
                 },
-                "example": "/moodle",
-                "default": "/lms"
+                "example": "/cem",
+                "default": "/cem"
             },
             {
                 "name": "is_public",
