--- a/manifest.json
+++ b/manifest.json
@@ -39,6 +39,22 @@
                 "example": "/cem",
                 "default": "/cem"
             },
+	    {
+		"name": "admin",
+		"type": "user",
+		"ask": {
+		    "en": "Choose the Ibeads user"
+		},
+		"example": "devadmin"
+	    },
+	    {
+		"name": "sql",
+		"type": "boolean",
+		"ask": {
+		    "en": "Create a database?"
+		},
+		"default": true
+	    },	    
             {
                 "name": "is_public",
                 "type": "boolean",
