--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,21 +1,40 @@
-#sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
-location __PATH__/ {
-	alias __FINALPATH__/ ;
-	if ($scheme = http) {
-		rewrite ^ https://$server_name$request_uri? permanent;
-	}
-	index index.html index.php ;
-	try_files $uri $uri/ index.php;
-	location ~ [^/]\.php(/|$) {
-		fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-		fastcgi_pass unix:/var/run/php7.1-fpm-__APPNAME__.sock;
-		fastcgi_index index.php;
-		include fastcgi_params;
-		fastcgi_param REMOTE_USER $remote_user;
-		fastcgi_param PATH_INFO $fastcgi_path_info;
-		fastcgi_param SCRIPT_FILENAME $request_filename;
-	}
+location / {
+    	try_files $uri $uri/ /index.php?/$request_uri;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubdomains" always;
+        add_header X-Frame-Options SAMEORIGIN;
+        add_header X-Content-Type-Options nosniff;
+        add_header X-XSS-Protection "1; mode=block";
 
-	# Include SSOWAT user panel.
-	include conf.d/yunohost_panel.conf.inc;
-}
+        location ~* ^.+\.(jpeg|jpg|png|gif|bmp|ico|svg|css|js)$ {
+            expires max;
+        }
+
+        location ~ [^/]\.php(/|$) {
+        	add_header Strict-Transport-Security "max-age=31536000; includeSubdomains" always;
+                add_header X-Frame-Options SAMEORIGIN;
+                add_header X-Content-Type-Options nosniff;
+                add_header X-XSS-Protection "1; mode=block";
+                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                if (!-f $document_root$fastcgi_script_name) {
+            		return 404;
+        	}
+            	fastcgi_read_timeout 300;
+            	#fastcgi_pass 127.0.0.1:9002;
+		fastcgi_pass unix:/run/php/php7.1-fpm.sock;	
+            	fastcgi_index index.php;
+            	include /etc/nginx/fastcgi_params;
+            	# modify this path if OS flavor different than Ubuntu/Debian
+        }
+
+        # Optional, disallow access to this directories and folders
+        location ~* "/\.(htaccess|htpasswd|git|svn)$" {
+            deny all;
+            return 404;
+        }
+    }
+	
+    # The rest of your server block
+    root /var/www/__NAME__;
+
+# Include SSOWAT user panel.
+include conf.d/yunohost_panel.conf.inc;
