--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -34,7 +34,7 @@ location / {
     }
 	
     # The rest of your server block
-    root /var/www/__NAME__;
+    root /var/www/__APPNAME__;
 
 # Include SSOWAT user panel.
 include conf.d/yunohost_panel.conf.inc;
